[gd_scene load_steps=7 format=3 uid="uid://dbb7poy54om4k"]

[ext_resource type="Script" path="res://scripts/Glass.gd" id="1_vl7i4"]
[ext_resource type="Texture2D" uid="uid://co3wp6j4pr4rv" path="res://images/sprites/Glass Shatter-Sheet.png" id="2_k6al4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ht6s"]
size = Vector2(8, 42)

[sub_resource type="Animation" id="Animation_75q87"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlassSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vlj50"]
resource_name = "shatter"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlassSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgseo"]
_data = {
"RESET": SubResource("Animation_75q87"),
"shatter": SubResource("Animation_vlj50")
}

[node name="GlassWall" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
mass = 100000.0
max_contacts_reported = 20
contact_monitor = true
script = ExtResource("1_vl7i4")

[node name="GlassCollision" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("RectangleShape2D_1ht6s")

[node name="GlassSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_k6al4")
hframes = 7

[node name="GlassAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgseo")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
